# Pipowl

./: .gitignore  .pypiignore  Licence  README.md  __init__.py  core.py  pipowl.spec  pipowl_entry.py  pipowl_entry.spec  pyproject.toml
docs/whitepaper/: overview.md
pipowl/: __init__.py  cli.py  utils.py
pipowl.egg-info/: PKG-INFO  SOURCES.txt
pipowl/lang/: __init__.py  lang.py
pipowl/light/: __init__.py  light.py
pipowl/semantic/: __init__.py  semantic.py
pipowl/state/: __init__.py  state.py
test/: quickstart.py  test1.py  test_import.py  test_lang.py  test_search.py  test_semantic_light.py  test_stateowl.py
